# ByteCraw

./: .gitignore  DESIGN.md  LICENSE  README.md  pyproject.toml  requirements.txt  vercel.json
bytecraw/: __init__.py  core.py  crawler.py
demo/: app.py  posthog-setup-report.md  requirements.txt
demo/static/: analytics.js  i18n.js
demo/templates/: docs.html  index.html  landing.html  try.html
docs/: 01-html-estatico.md  02-js-dinamico.md  03-api-oculta.md  04-crawling-paginacion.md  05-login-sesion.md  06-crawling-grafos.md  estrategia.md  instalacion.md  markdown-llms.md  nota-etica.md  quickstart.md
examples/: 01_estatico_bs4.py  02_dinamico_playwright.py  03_api_red.py  04_scrapy_spider.py  05_api_con_login.py  extra_captcha.py  extra_html_a_markdown.py
